# research

./: .gitignore  README.md
algorithm/CLRS/: Insertion-Sort_Merge-Sort.md  clrs-chap6.md  clsr-chap5.md
database/: README.md
database/notes/: README.md
database/notes/cassandra/: README.md  practice.md
database/notes/mysql/: README.md  architect_and_key_components.md
database/tasks/0002/: myNoSql.md
database/tasks/0002/code_example/C/Non_Blocking/: CMakeLists.txt  client  client.cpp  data.h  main.cpp
database/tasks/0002/code_example/Java/TBD/thrift/: gen-node.cmd  gen.cmd  (+2 more)
database/tasks/0003/: online_schema_change.md
database/tasks/0004/: 0004.md
database/tasks/0005/: compare_cluster_management.md  how_innodb_support_mvcc.md  innodb.md
database/tasks/0006/: explore_redis_source.md
operating_systems/: references.md
operating_systems/notes/: c_2_asm.md  file_descriptor.md  inode.md  os_tutorials.md
operating_systems/os_from_scratch/: README.md  q3.asm  q4.asm  q4_print_string.asm
operating_systems/sample_code/asm/: mac_hola  mac_hola.asm
operating_systems/sample_code/c/: README.md
operating_systems/sample_code/c/sample_001_open_file/: abc.txt  open_file  open_file.c  open_file.dis
operating_systems/sample_code/c/sample_c_asm/: demo1.c
operating_systems/visualization/: README.md
operating_systems/visualization/os_visualizer/: index.html  package-lock.json  package.json
operating_systems/visualization/os_visualizer/src/components/: DemoAsm.vue  HelloWorld.vue
operating_systems/visualization/os_visualizer/src/router/: index.js
(+16 files in other folders)
